auto publishing updates to notebooks

--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0e465de4",
+   "id": "7d31df8d",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52e68e13",
+   "id": "8bae2abf",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca578d55",
+   "id": "93c23a73",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "176c761c",
+   "id": "08a8d182",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02519ae3",
+   "id": "b1806bc5",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "154066cb",
+   "id": "d6fc6890",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "803e4cd2",
+   "id": "31baf70c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4b6eaa4",
+   "id": "c06c71b3",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e195ed8a",
+   "id": "71e630d4",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3c9341f",
+   "id": "8cfe1ae8",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6b700af",
+   "id": "299e8d99",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0c6e64f",
+   "id": "e9d2d4d9",
    "metadata": {
     "hide-output": false
    },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a41597d",
+   "id": "f4e4727c",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73197440",
+   "id": "9b8215f7",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e24a2d1",
+   "id": "9dbe2c57",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d410a1e6",
+   "id": "cae543d3",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40016fcf",
+   "id": "8889a054",
    "metadata": {},
    "source": [
     "Let’s define a function to create an inventory model using the given parameters."
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "334d1d73",
+   "id": "014506d0",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4e21e9a",
+   "id": "3b0724a8",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2ee12b8",
+   "id": "569c577d",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caa6ff12",
+   "id": "e6f6dd06",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3959eb22",
+   "id": "97714e0a",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7eff7c0",
+   "id": "6d0866a0",
    "metadata": {
     "hide-output": false
    },
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd415d11",
+   "id": "c83927af",
    "metadata": {
     "hide-output": false
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f544df",
+   "id": "54e2f6bc",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7685f5f8",
+   "id": "5921ad32",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b676db4",
+   "id": "3beed5ae",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc235f0b",
+   "id": "ceb266e8",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acf7d518",
+   "id": "67e4d2c9",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c7e71c5",
+   "id": "7499e853",
    "metadata": {
     "hide-output": false
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65f04bb2",
+   "id": "4aab797d",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c11daf9d",
+   "id": "71f3fbe9",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "657c65cf",
+   "id": "8da1d521",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37297c3a",
+   "id": "59a4a33e",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "156d59d8",
+   "id": "15772273",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6c06cf4",
+   "id": "d8dc2230",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b178b0ea",
+   "id": "38be9cc0",
    "metadata": {
     "hide-output": false
    },
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81a8e469",
+   "id": "29bfbf7c",
    "metadata": {
     "hide-output": false
    },
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6c00422",
+   "id": "6d2e12cd",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9176a139",
+   "id": "7869e564",
    "metadata": {},
    "source": [
     "## Numba implementation\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f748b36e",
+   "id": "35bb3468",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "348f18e3",
+   "id": "0ce7513d",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bb82b9c",
+   "id": "744d921d",
    "metadata": {
     "hide-output": false
    },
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "908aed8e",
+   "id": "dded0c9a",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate the compile time."
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "503bf2fb",
+   "id": "f636e1b5",
    "metadata": {
     "hide-output": false
    },
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31b08a02",
+   "id": "0fb5f269",
    "metadata": {},
    "source": [
     "Let’s verify that the Numba and JAX implementations converge to the same solution."
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65895318",
+   "id": "76d31f20",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "100c520f",
+   "id": "87265b97",
    "metadata": {},
    "source": [
     "Here’s the speed comparison."
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eff03ae",
+   "id": "fcaa3d6e",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   }
  ],
  "metadata": {
-  "date": 1732011573.203834,
+  "date": 1732064317.7839913,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
