--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6237256d",
+   "id": "7c76c436",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ccf5984",
+   "id": "1756c506",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "234657f7",
+   "id": "ae4e352e",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5185001f",
+   "id": "04a2d479",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31091d09",
+   "id": "2952a406",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e278a270",
+   "id": "2a16a26e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c33f13b0",
+   "id": "eee45653",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0caed2d",
+   "id": "3bc534dc",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af5cc061",
+   "id": "8b790404",
    "metadata": {
     "hide-output": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "173f6b3e",
+   "id": "b89ef4bd",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c04348b",
+   "id": "f6bfcce0",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abbae0be",
+   "id": "32d4ac18",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "734441d6",
+   "id": "57cbd0ad",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d864ef6",
+   "id": "f8ddf2b4",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b28af06c",
+   "id": "44c9e265",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6fb38a3",
+   "id": "9788e9f6",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0471f5d2",
+   "id": "ba81d3f2",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "132137ca",
+   "id": "37e8723c",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7e1c8f8",
+   "id": "ff41f977",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bd76571",
+   "id": "492a8788",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1a7335c",
+   "id": "27d329ba",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed775bca",
+   "id": "f6bde3e8",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "950b82e7",
+   "id": "f803ebf4",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bf3bcdb",
+   "id": "51e284bb",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93894bad",
+   "id": "494f00ea",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ea200b",
+   "id": "c2d4afb8",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "783388f0",
+   "id": "140acb78",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1172a0f",
+   "id": "1c38d5a8",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66ccc3e7",
+   "id": "d4b1dc38",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bdcd79b",
+   "id": "95a6e6b9",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21ccb842",
+   "id": "ed18a1fa",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06a5464e",
+   "id": "6ce9f8c1",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82411617",
+   "id": "6a3ff6bd",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a952043",
+   "id": "8d80ce46",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "948ea138",
+   "id": "57773cba",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8398bd3e",
+   "id": "3c61364f",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8210d00f",
+   "id": "f8083f8a",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63282bb6",
+   "id": "619a4fe9",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f6d1bd7",
+   "id": "362b18c7",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ca5287c",
+   "id": "2995dc11",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd981972",
+   "id": "c7561f9f",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34fda5c9",
+   "id": "8bb8c130",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "017b9477",
+   "id": "8c45c390",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ae768b",
+   "id": "56afe227",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03fdad17",
+   "id": "86092f29",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b75f2679",
+   "id": "6dd26cd4",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf41c893",
+   "id": "1d29b403",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eab219f6",
+   "id": "c39adf4e",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42303304",
+   "id": "17e463bd",
    "metadata": {
     "hide-output": false
    },
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26cc2eb6",
+   "id": "08456fe6",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0b24f3a",
+   "id": "63f0f4e8",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "204e2b30",
+   "id": "f218df60",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c576e1c",
+   "id": "cc34c96d",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee7fd44a",
+   "id": "3f4c3a29",
    "metadata": {
     "hide-output": false
    },
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "816d03b7",
+   "id": "a0364c3e",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87693c98",
+   "id": "04dc2e24",
    "metadata": {
     "hide-output": false
    },
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb55406c",
+   "id": "9bdab605",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88171825",
+   "id": "bdd76a51",
    "metadata": {
     "hide-output": false
    },
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99b4d4f3",
+   "id": "3b8d12ee",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c297e866",
+   "id": "8698174f",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5636f35",
+   "id": "dd44b450",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63068d0c",
+   "id": "0304c71e",
    "metadata": {
     "hide-output": false
    },
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f1cf3bc",
+   "id": "f87b7ce8",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecf1d184",
+   "id": "4bdb2eeb",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba7e3c26",
+   "id": "e446c735",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -989,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f2e93e4",
+   "id": "8c1d66cd",
    "metadata": {
     "hide-output": false
    },
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cd3cdcf",
+   "id": "7e64dae7",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc8b6f59",
+   "id": "c543045d",
    "metadata": {
     "hide-output": false
    },
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "048a2ae4",
+   "id": "e612e51e",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1032,7 +1032,7 @@
   }
  ],
  "metadata": {
-  "date": 1732011573.650797,
+  "date": 1732064318.2323995,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
