--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4cf145b1",
+   "id": "19618159",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46807f08",
+   "id": "5c09d3e9",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3424465a",
+   "id": "fe6363f3",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44596e66",
+   "id": "b1132bca",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c4d1208",
+   "id": "ac930dd0",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c95f0da4",
+   "id": "92b2f8bc",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f30977de",
+   "id": "fb05d20d",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34d81f86",
+   "id": "f29de941",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd5354f5",
+   "id": "abe8fe9a",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c99f3a57",
+   "id": "a013a54e",
    "metadata": {
     "hide-output": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2126b86",
+   "id": "cbfa8558",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72f2e8ce",
+   "id": "e8252646",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d494f06",
+   "id": "14a7c3ea",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e7c8443",
+   "id": "ae165921",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f61f67b",
+   "id": "7503d025",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b55e44b",
+   "id": "8bd571fb",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6692dfb1",
+   "id": "03e3c101",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "543995f9",
+   "id": "9dcba0d1",
    "metadata": {
     "hide-output": false
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f84f005",
+   "id": "01b8d54b",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc5a2b57",
+   "id": "097049cc",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26e4be34",
+   "id": "11f82e8f",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f4b424b",
+   "id": "a936491f",
    "metadata": {
     "hide-output": false
    },
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45cbdf5c",
+   "id": "908a1c6c",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1172fe",
+   "id": "02ba0b27",
    "metadata": {
     "hide-output": false
    },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64ab105e",
+   "id": "e618537c",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eec38797",
+   "id": "0503f4f7",
    "metadata": {
     "hide-output": false
    },
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f1c909e",
+   "id": "7ed1fa7e",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0742f111",
+   "id": "c15ed76c",
    "metadata": {},
    "source": [
     "### Further vectorization\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3baa05d3",
+   "id": "e976c94c",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ec241a",
+   "id": "89d1566f",
    "metadata": {},
    "source": [
     "Let’s test it with compile time included."
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb70ee9e",
+   "id": "1bbf962b",
    "metadata": {
     "hide-output": false
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1287e752",
+   "id": "5c895a0a",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddec563a",
+   "id": "546bbc85",
    "metadata": {
     "hide-output": false
    },
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff9e872c",
+   "id": "1ec0df53",
    "metadata": {},
    "source": [
     "On one hand, this version is faster than the previous one, where random variables were\n",
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d430e25b",
+   "id": "c88fde07",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f1bc0b8",
+   "id": "aa8351ea",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71846504",
+   "id": "8755cba8",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91867c07",
+   "id": "6b57d28c",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e74ef3d",
+   "id": "21a247ed",
    "metadata": {},
    "source": [
     "We run the code again to eliminate compile time."
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae2a4ee0",
+   "id": "1fcf44f1",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3071abfd",
+   "id": "7f36a388",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dadde7b2",
+   "id": "4e423c44",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "960ab323",
+   "id": "3bbb820c",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5725351",
+   "id": "93f549d6",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21964c44",
+   "id": "5300f2d3",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fed0e079",
+   "id": "e796e216",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55965e1f",
+   "id": "5d8f6ddb",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "339e4c41",
+   "id": "5f6b4b3b",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e32b541e",
+   "id": "6a58f6be",
    "metadata": {
     "hide-output": false
    },
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15298330",
+   "id": "d1039f16",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9ffa6f4",
+   "id": "e1009588",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e25ce23",
+   "id": "f50a0881",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "772da48d",
+   "id": "b0192c10",
    "metadata": {
     "hide-output": false
    },
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92562a8b",
+   "id": "c1b7a163",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f0cab36",
+   "id": "f74ba10b",
    "metadata": {
     "hide-output": false
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7756d394",
+   "id": "eafd1300",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "655ec656",
+   "id": "013d521a",
    "metadata": {
     "hide-output": false
    },
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f85b789",
+   "id": "d1f5f5a6",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   }
  ],
  "metadata": {
-  "date": 1732011573.175812,
+  "date": 1732064317.7557838,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
