--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "17b09c8e",
+   "id": "e814b54f",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "067131fa",
+   "id": "72dd7675",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7003eefc",
+   "id": "de197b42",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50e84189",
+   "id": "94047b17",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f0008e2",
+   "id": "209f1bce",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8106bdd",
+   "id": "6fa31180",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ec47a2b",
+   "id": "301a3261",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47324b38",
+   "id": "5fdd4a85",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f996249",
+   "id": "d7bea288",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "654f2a61",
+   "id": "9b5dce94",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d6c3790",
+   "id": "05212793",
    "metadata": {
     "hide-output": false
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e8504a2",
+   "id": "05e1f971",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aa1d2e9",
+   "id": "567c8648",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82c36d0c",
+   "id": "dc6c4f98",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b3b6d45",
+   "id": "963288cd",
    "metadata": {
     "hide-output": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e03deee2",
+   "id": "bc714588",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc3348b8",
+   "id": "cc047376",
    "metadata": {
     "hide-output": false
    },
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82144a6f",
+   "id": "3dff1eb6",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08285356",
+   "id": "cc28998c",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "364db94f",
+   "id": "ffb00743",
    "metadata": {
     "hide-output": false
    },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7366e8e6",
+   "id": "4253cda1",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10b84961",
+   "id": "1cbbde2b",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0ae2913",
+   "id": "709e61b7",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2146f8ee",
+   "id": "d9cb568d",
    "metadata": {
     "hide-output": false
    },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeca9c53",
+   "id": "8b9567b1",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57a44283",
+   "id": "e9abe005",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1a1e625",
+   "id": "2b1c7a24",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29522f15",
+   "id": "8bbfea0f",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5e1b380",
+   "id": "8511dcdb",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c404dc8b",
+   "id": "60345a96",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a5e2c56",
+   "id": "59203d80",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54a22bab",
+   "id": "c8ce3b60",
    "metadata": {
     "hide-output": false
    },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34fcbb97",
+   "id": "a845313b",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8a2f923",
+   "id": "4df4f2a4",
    "metadata": {
     "hide-output": false
    },
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccd43296",
+   "id": "98ccf178",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2f054a0",
+   "id": "914d4ab3",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce842ca4",
+   "id": "2b46bfb2",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9e29773",
+   "id": "9ea5d9de",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "940e92f9",
+   "id": "f1be3144",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d64a39b",
+   "id": "abd52b44",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "581557ac",
+   "id": "83f11963",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33b0fc89",
+   "id": "05cfd633",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc19c8fa",
+   "id": "4efad8a3",
    "metadata": {
     "hide-output": false
    },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aa3c9e9",
+   "id": "a84520e9",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "368d015c",
+   "id": "97d41bba",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24ae67d2",
+   "id": "d647bb9a",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4cc957b",
+   "id": "4ce9c1fb",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "369b3f4c",
+   "id": "4b50511c",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a82b1ba",
+   "id": "b6c08ba7",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8a43981",
+   "id": "edae0deb",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97f96df6",
+   "id": "d9aed67e",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e151fb4a",
+   "id": "d59b0cb2",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e027b5de",
+   "id": "f9b1c3eb",
    "metadata": {
     "hide-output": false
    },
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e647ef5",
+   "id": "acc49fe2",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66684ff4",
+   "id": "eef5f870",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df9697e6",
+   "id": "8e2ac1eb",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c448e78",
+   "id": "3b07831d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc787eea",
+   "id": "66f27ed6",
    "metadata": {
     "hide-output": false
    },
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ca1798c",
+   "id": "1d322daf",
    "metadata": {
     "hide-output": false
    },
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90f98afa",
+   "id": "18a534c1",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38c6629",
+   "id": "6516419c",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e750a4d",
+   "id": "f19133f3",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67cf6efe",
+   "id": "4cb8ceea",
    "metadata": {
     "hide-output": false
    },
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f3488dd",
+   "id": "525e68a8",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b61ec33",
+   "id": "35df3079",
    "metadata": {
     "hide-output": false
    },
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48f3f4b4",
+   "id": "878ae1e8",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af2a0551",
+   "id": "c7899ab3",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f294db2",
+   "id": "92d42163",
    "metadata": {
     "hide-output": false
    },
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9fa3dc0",
+   "id": "846b8948",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1169,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d379aaa6",
+   "id": "dc062717",
    "metadata": {
     "hide-output": false
    },
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5d01dda",
+   "id": "235778c5",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "407772e3",
+   "id": "49c7c7e2",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3628445e",
+   "id": "285e701e",
    "metadata": {
     "hide-output": false
    },
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5348950f",
+   "id": "5a07c5d4",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a84287f2",
+   "id": "8754966e",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0faaaa25",
+   "id": "91d96e5e",
    "metadata": {
     "hide-output": false
    },
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f41e3f95",
+   "id": "8f811682",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46542ed2",
+   "id": "e46ae356",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "146378a8",
+   "id": "c8adfc1c",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ff343cc",
+   "id": "d91a21ff",
    "metadata": {
     "hide-output": false
    },
@@ -1353,7 +1353,7 @@
   }
  ],
  "metadata": {
-  "date": 1732011573.799403,
+  "date": 1732064318.3811185,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
